[package]
name = "strpg"
version = "0.9.99"
edition = "2021"

[dependencies]
clap        = {version = "3.0.14", features = [ "derive" ] }
petgraph    = "0.6.0"
rustc-hash  = "1"
env_logger  = "0.7"
log         = "0.4"
regex       = "1"
macroquad   = {version = "0.3.15", default_features = false }
quad-snd    = {version = "0.2", optional = true }
